tests/miniJava/neg/006666_mutation.MiniJava
class java { public static void Main static ( String [ ] java ) { { } } }
